--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -82,26 +82,37 @@ jobs:
     - name: Install AWS CLI
       run: |
         curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-        unzip awscliv2.zip
-        sudo ./aws/install
+        unzip -q awscliv2.zip
+        sudo ./aws/install --update
 
-    - name: Sync to Arvan S3
+    - name: Configure AWS
       run: |
         aws configure set aws_access_key_id ${{ secrets.ARVAN_ACCESS_KEY_ID }}
         aws configure set aws_secret_access_key ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
-        aws configure set default.region us-east-1
-        
+        aws configure set default.region ir-thr-at1
+
+    - name: Sync to Arvan S3
+      run: |
         aws s3 sync . s3://${{ secrets.ARVAN_BUCKET_NAME }}/ \
           --endpoint-url=https://s3.ir-thr-at1.arvanstorage.ir \
           --exclude ".git/*" \
           --exclude ".github/*" \
           --exclude "*.py" \
           --exclude "*.zip" \
+          --exclude "awscliv2.zip" \
+          --exclude "aws/*" \
           --delete \
           --acl public-read \
-          --cache-control "no-cache, no-store, must-revalidate" \
+          --cache-control "max-age=0, no-cache, no-store, must-revalidate" \
           --metadata-directive REPLACE
-      continue-on-error: true
+      continue-on-error: false
+
+    - name: Verify Upload
+      run: |
+        echo "Checking uploaded files..."
+        aws s3 ls s3://${{ secrets.ARVAN_BUCKET_NAME }}/ \
+          --endpoint-url=https://s3.ir-thr-at1.arvanstorage.ir \
+          --recursive | tail -20
 
   deploy_pages:
     needs: update_configs
