--- a/.github/workflows/main-pipeline.yml
+++ b/.github/workflows/main-pipeline.yml
@@ -7,57 +7,100 @@ on:
   push:
     branches: [ main ]
 
+permissions:
+  contents: write 
+  pages: write    
+  id-token: write 
+  
 jobs:
   update_and_deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 60
     
     steps:
-    - name: Checkout
+    - name: 1. Checkout
       uses: actions/checkout@v4
+      with:
+        # ✅ استفاده از GH_PAT برای مجوز Checkout/Push
+        token: ${{ secrets.GH_PAT }} 
 
-    - name: Setup Python
+    - name: 2. Setup Python
       uses: actions/setup-python@v5
       with:
         python-version: '3.11'
 
-    - name: Install Python Dependencies
-      run: pip install requests PyGithub PyYAML
+    - name: 3. Install Python Dependencies and AWS CLI
+      run: |
+        pip install requests PyGithub PyYAML
+        # نصب AWS CLI
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "aws.zip"
+        unzip -q aws.zip
+        sudo ./aws/install --update
 
-    - name: Run Scraper
+    - name: 4. Run Scraper
       run: timeout 2700 python scraper.py || true
       env:
         GH_PAT: ${{ secrets.GH_PAT }}
         GITHUB_SEARCH_LIMIT: 150
 
-    - name: Setup Node.js
+    - name: 5. Setup Node.js & Install Wrangler
       uses: actions/setup-node@v4
       with:
         node-version: '20'
+    - run: npm install -g wrangler@3 # ✅ استفاده از wrangler v3
 
-    - name: Install Wrangler
-      run: npm install -g wrangler
-
-    - name: Deploy All Workers
+    - name: 6. Deploy All Workers & Update KV
+      if: secrets.CLOUDFLARE_API_TOKEN != ''
       run: |
-        wrangler deploy --env v2v-proxy
-        wrangler deploy --env v2v
-        wrangler deploy --env winter-hill-0307
-        wrangler deploy --env rapid-scene-1da6
+        worker_names=("v2v-proxy" "v2v" "winter-hill-0307" "rapid-scene-1da6")
+        
+        echo "--- Deploying Cloudflare Workers ---"
+        for worker_name in "${worker_names[@]}"; do
+          # ✅ اصلاح دستور deploy: استفاده از فایل پیکربندی جداگانه
+          wrangler deploy worker.js \
+            --config "wrangler-${worker_name}.toml" \
+            --name "$worker_name" || { 
+            echo "Error deploying $worker_name. Continuing." 
+          }
+        done
+        
+        echo "--- Uploading to Cloudflare KV ---"
+        if [ -n "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}" ]; then
+            if [ -f "all_live_configs.json" ]; then
+                wrangler kv:key put "all_live_configs.json" \
+                    --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}" \
+                    --path "all_live_configs.json" || echo "KV upload failed for configs."
+            fi
+            if [ -f "cache_version.txt" ]; then
+                wrangler kv:key put "cache_version.txt" \
+                    --namespace-id "${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}" \
+                    --path "cache_version.txt" || echo "KV upload failed for cache version."
+            fi
+        fi
+
       env:
         CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+        CLOUDFLARE_KV_NAMESPACE_ID: ${{ secrets.CLOUDFLARE_KV_NAMESPACE_ID }}
+      continue-on-error: true
 
-    - name: Commit Configs
+    - name: 7. Commit Configs
       run: |
         git config user.name "GitHub Actions"
         git config user.email "actions@github.com"
         git add all_live_configs.json clash_subscription.yml cache_version.txt
-        git diff --quiet && git diff --staged --quiet || {
+        # استفاده از GH_PAT برای push
+        if git diff --quiet --cached; then
+          echo "No changes to commit."
+        else
           git commit -m "Update: $(date -u '+%Y-%m-%d %H:%M UTC')"
           git push origin main
-        }
+        fi
+      env:
+        # ✅ استفاده از GH_PAT برای push
+        GITHUB_TOKEN: ${{ secrets.GH_PAT }} 
 
-    - name: Deploy Vercel
+    - name: 8. Deploy Vercel
       uses: amondnet/vercel-action@v25
       with:
         vercel-token: ${{ secrets.VERCEL_TOKEN }}
@@ -66,26 +109,22 @@ jobs:
         vercel-args: '--prod --force'
       continue-on-error: true
 
-    - name: Install AWS CLI
+    - name: 9. Deploy Arvan S3
       run: |
-        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "aws.zip"
-        unzip -q aws.zip
-        sudo ./aws/install
-
-    - name: Deploy Arvan S3
-      run: |
-        aws configure set aws_access_key_id ${{ secrets.ARVAN_ACCESS_KEY_ID }}
-        aws configure set aws_secret_access_key ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
         aws s3 sync . s3://${{ secrets.ARVAN_BUCKET_NAME }}/ \
           --endpoint-url=https://s3.ir-thr-at1.arvanstorage.ir \
           --exclude ".git/*" --exclude ".github/*" --exclude "*.py" \
           --delete --acl public-read
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.ARVAN_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.ARVAN_SECRET_ACCESS_KEY }}
       continue-on-error: true
 
-    - name: Deploy GitHub Pages
+    - name: 10. Deploy GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        # ✅ استفاده از GH_PAT (مطابق درخواست شما)
+        github_token: ${{ secrets.GH_PAT }} 
         publish_dir: ./
         exclude_assets: '.github,*.py'
       continue-on-error: true
